--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
 
 /* Mensagem de vitória */
 .winner-message {
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -134,4 +134,14 @@ body {
     border: none;
     margin-top: 16px;
     color: white;
+}
+
+.winner-message-button:hover {
+    color: rgba(65, 185, 131, 1);
+    background-color: white;
+}
+
+.winner-message-text {
+    color: white;
+    font-size: 5rem;
 }
