--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,75 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    background: linear-gradient(90deg, rgb(67, 218, 218) 0%, rgb(231, 103, 199) 100%);
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(
+    90deg,
+    rgb(67, 218, 218) 0%,
+    rgb(231, 103, 199) 100%
+  );
 }
 
 .board {
-    align-content: center;
-    align-items: center;
-    display: grid;
-    height: 100%;
-    justify-content: center;
-    justify-items: center;
-    width: 100%;
-    grid-template-columns: repeat(3, auto);
+  align-content: center;
+  align-items: center;
+  display: grid;
+  height: 100%;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+  grid-template-columns: repeat(3, auto);
 }
 
 .board.x .cell:not(.x):not(.circle):hover::after,
 .board.x .cell:not(.x):not(.circle):hover::before,
 .board.circle .cell:not(.x):not(.circle):hover::after,
 .board.circle .cell:not(.x):not(.circle):hover::before {
-    background: rgba(255, 255, 255, 0.3) !important;
+  background: rgba(255, 255, 255, 0.3) !important;
 }
 
 /* Celulas */
 .cell {
-    width: 100px;
-    height: 100px;
-    border: 4px solid white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  width: 100px;
+  height: 100px;
+  border: 4px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .cell.x,
 .cell.circle {
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 .cell:nth-child(1),
 .cell:nth-child(2),
 .cell:nth-child(3) {
-    border-top: none;
+  border-top: none;
 }
 
 .cell:nth-child(1),
 .cell:nth-child(4),
 .cell:nth-child(7) {
-    border-left: none;
+  border-left: none;
 }
 
 .cell:nth-child(7),
 .cell:nth-child(8),
 .cell:nth-child(9) {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .cell:nth-child(3),
 .cell:nth-child(6),
 .cell:nth-child(9) {
-    border-right: none;
+  border-right: none;
 }
 
 /* X */
@@ -73,21 +77,21 @@ body {
 .cell.x::after,
 .board.x .cell:not(.x):not(.circle):hover::after,
 .board.x .cell:not(.x):not(.circle):hover::before {
-    content: "";
-    height: calc(100px * 0.15);
-    width: calc(100px * 0.9);
-    background: white;
-    position: absolute;
+  content: "";
+  height: calc(100px * 0.15);
+  width: calc(100px * 0.9);
+  background: white;
+  position: absolute;
 }
 
 .cell.x::before,
 .board.x .cell:hover::before {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .cell.x::after,
 .board.x .cell:hover::after {
-    transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 /* Bolinha */
@@ -95,57 +99,78 @@ body {
 .cell.circle::after,
 .board.circle .cell:not(.x):not(.circle):hover::after,
 .board.circle .cell:not(.x):not(.circle):hover::before {
-    content: "";
-    height: calc(100px * 0.8);
-    width: calc(100px * 0.8);
-    background: white;
-    position: absolute;
-    border-radius: 50%;
+  content: "";
+  height: calc(100px * 0.8);
+  width: calc(100px * 0.8);
+  background: white;
+  position: absolute;
+  border-radius: 50%;
 }
 
 .cell.circle::before {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .cell.circle::after {
-    transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 /* Mensagem de vitória */
 .winner-message {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.8);
-    flex-direction: column;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  flex-direction: column;
 }
 
 .winner-message-button {
-    font-size: 2.5rem;
-    background-color: rgba(65, 185, 131, 1);
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 5px;
-    border: none;
-    margin-top: 16px;
-    color: white;
+  font-size: 2.5rem;
+  background-color: rgba(65, 185, 131, 1);
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+  margin-top: 16px;
+  color: white;
 }
 
 .winner-message-button:hover {
-    color: rgba(65, 185, 131, 1);
-    background-color: white;
+  color: rgba(65, 185, 131, 1);
+  background-color: white;
 }
 
 .winner-message-text {
-    color: white;
-    font-size: 5rem;
+  color: white;
+  font-size: 5rem;
 }
 
 .show-winner-message {
-    display: flex;
+  display: flex;
+}
+
+.copyright {
+  text-align: center;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+
+@media screen and (max-width: 520px) {
+  .winner-message-text {
+    font-size: 3em;
+    }
+
+  .winner-message-button {
+    font-size: 2em;
+  }
+
+  .copyright {
+    font-size: 0.8em;
+  }
 }
