--- a/css/style.css
+++ b/css/style.css
@@ -155,16 +155,17 @@ body {
 }
 
 .copyright {
-  text-align: center;
   color: #ffffff;
-  font-size: 16px;
   font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
-@media screen and (max-width: 520px) {
+@media (max-width: 520px) {
   .winner-message-text {
     font-size: 3em;
-    }
+  }
 
   .winner-message-button {
     font-size: 2em;
